[project]
name = "robopair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "fschat[model-worker,webui]>=0.2.36",
    "numpy>=2.4.4",
    "open-clip-torch>=3.3.0",
    "openai>=2.33.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.1",
]
