[project]
name = "robopair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.74.0",
    "numpy>=2.2.6",
    "python-dotenv>=1.2.2",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
